--- a/manuscript/supplemental_material.Rnw
+++ b/manuscript/supplemental_material.Rnw
@@ -79,6 +79,30 @@
 \renewcommand\cite[1]{\autocite{#1}}
 \pagestyle{fancy}
 
+\newcommand{\smonkey}[0]{\textit{A. fusciceps}\xspace}
+\newcommand{\cow}[0]{\textit{B. taurus}\xspace}
+\newcommand{\dog}[0]{\textit{C. familiaris}\xspace}
+\newcommand{\armadillo}[0]{\textit{D. novemcinctus}\xspace}
+\newcommand{\horse}[0]{\textit{E. caballus}\xspace}
+\newcommand{\elephant}[0]{\textit{L. africana}\xspace}
+\newcommand{\human}[0]{\textit{H. sapiens}\xspace}
+\newcommand{\opossum}[0]{\textit{M. domestica}\xspace}
+\newcommand{\mouse}[0]{\textit{M. musculus}\xspace}
+\newcommand{\galili}[0]{\textit{N. galili}\xspace}
+\newcommand{\sheep}[0]{\textit{O. aries}\xspace}
+\newcommand{\bonobo}[0]{\textit{P. paniscus}\xspace}
+\newcommand{\carmeli}[0]{\textit{S. carmeli}\xspace}
+\newcommand{\pig}[0]{\textit{S. scrofa}\xspace}
+
+\newcommand{\genetreeexplanation}[1]{Gene tree and heatmap of
+  expression of genes related to #1. The gene tree was obtained from
+  Ensembl~\cite{Cunningham.ea2015:Ensembl2015} and genes from species
+  not included in this study or having expression by \ac{FPKM} less
+  than 1 were excluded from the plotted tree. Heatmap cells in grey
+  are from species where there was no expression of the relevant
+  transcript (or a species where that transcript does not apply).}
+
+
 \begin{document}
 
 \makeatletter 
@@ -157,7 +181,9 @@ load("../go_annotation/go_tissue_analysis")
 
 @ 
 
-\section{Sequence Read Archive}
+\section{Species}
+
+\subsection{Sequence Source}
 
 \DLA{Add in SRR and GSE numbers for everything here once I have them.}
 
@@ -227,62 +253,92 @@ load("../go_annotation/go_tissue_analysis")
   \label{tab:srr_numbers}
 \end{table}
 
+\subsection{Species Alignment}
+
+\begin{table}
+  \begin{tabular}{c c c c}
+    \toprule
+    Species                       & Common Name        & Reference & Read Length \\
+    \midrule
+    \textit{Ateles fusciceps}     & Spider monkey      & \textit{Homo sapiens} & 100 \\
+    \textit{Bos taurus}           & Cow                & UMD3.1     & 75 \\
+    \textit{Canis familiaris}     & Dog                & CanFam3.1  & 150 \\
+    \textit{Dasypus novemcinctus} & 9-Banded Armadillo & DASNOV3    & 100 \\
+    \textit{Equus caballus}       & Horse              & EquCab2    & 100 \\ 
+    \textit{Loxodonta africana}   & Elephant           & loxAfr3    & 75 \\
+    \textit{Homo sapiens}         & Human              & GRCh38     & 75, 150 \\
+    \textit{Monodelphis domestica} & Opossum           & BROAD05    & 75 \\
+    \textit{Mus musculus}         & Mouse              & GRCm38     & 35,44,150 \\
+    \textit{Nannospalax galili}   & Blind mole rat     & \textit{Mus musculus} & 100 \\
+    \textit{Ovis aries}           & Sheep              & Oar\_v3.1   & 151 \\
+    \textit{Pan paniscus}         & Bonobo             & CHIMP2.1.4 & 150 \\
+    \textit{Spalax carmeli}       & Blind mole rat     & \textit{Mus musculus} & 100 \\
+    \textit{Sus scrofa}           & Duroc (pig)        & Sscrofa10.2 & 51 \\
+    \bottomrule
+  \end{tabular}
+  \caption{Reference genomes for aligned species}
+  \label{tab:ref_genome_aligned_species}
+\end{table}
+
 \section{Transcriptome statistics}
 
-% \begin{figure}
-% <<transcriptome.mapping.figure,fig.width=8,fig.height=8,echo=FALSE>>=
-% star.logs.unmapped <- 
-%     star.logs[grepl("%",field) & 
-%                   grepl("unmapped",field) & 
-%                       !grepl("too many mismatches",field),]
-% star.logs.unmapped <- 
-%     star.logs.unmapped[,field:=capfirst(gsub("\\% of reads unmapped: ","",field))]
-% pushViewport(viewport(layout=grid.layout(ncol=1,nrow=2,heights=c(2,1))))
-% print(ggplot(star.logs.unmapped,
-%              aes(x=capfirst(species),y=as.numeric(gsub("%","",value))))
-%       + geom_boxplot()
-%       + facet_grid(field~.,scales="free")
-%       + ylab("Percent of Reads")
-%       + xlab(NULL)
-%       + theme_bw()
-%       + theme(legend.position="top",
-%               plot.margin=unit(c(0,0,0,1.1),"strwidth",data=list("","","","e8")),
-%               axis.title.x=element_blank(),
-%               axis.text.x = element_blank()),#element_text(angle = 30, hjust = 1, vjust=1,face="italic")),
-%       vp=viewport(layout.pos.col=1,layout.pos.row=1)
-%       )
-% pushViewport(viewport(layout.pos.col=1,layout.pos.row=1))
-% grid.text("A",
-%           y=unit(1,"npc")-unit(0.1,"cm"),
-%           x=unit(0,"npc")+unit(0.1,"cm"),
-%           gp=gpar(fontsize=24),
-%           just=c("left","top"))
-% popViewport()          
-% print(ggplot(star.logs[grepl("input reads$",field),],
-%              aes(x=capfirst(species),y=as.numeric(value)))
-%       + geom_boxplot()
-%       + scale_y_log10()
-%       + ylab("Reads")
-%       + xlab("Species")
-%       + theme_bw()
-%       + theme(legend.position="top",
-%               plot.margin=unit(c(0,1.6,0,0),"strheight",data=list("","TO","","")),
-%               axis.text.x = element_text(angle = 30, hjust = 1, vjust=1,face="italic")),
-%       vp=viewport(layout.pos.col=1,layout.pos.row=2))
-% pushViewport(viewport(layout.pos.col=1,layout.pos.row=2))
-% grid.text("B",
-%           y=unit(1,"npc")-unit(0.1,"cm"),
-%           x=unit(0,"npc")+unit(0.1,"cm"),
-%           gp=gpar(fontsize=24),
-%           just=c("left","top"))
-% popViewport(2)
-% @ 
-% \caption{RNAseq read and alignment statistics for all species. A)
-%   Boxplot of percentages of unmapped reads in each species; 0\% of
-%   reads in all species were unmapped because of mismatches. B) Boxplot
-%   of number of RNAseq reads in each species.}
-% \label{fig:transcriptome_statistics}
-% \end{figure}
+
+
+\begin{figure}
+<<transcriptome.mapping.figure,fig.width=8,fig.height=8,echo=FALSE>>=
+star.logs.unmapped <- 
+    star.logs[grepl("%",field) & 
+                  grepl("unmapped",field) & 
+                      !grepl("too many mismatches",field),]
+star.logs.unmapped <- 
+    star.logs.unmapped[,field:=capfirst(gsub("\\% of reads unmapped: ","",field))]
+pushViewport(viewport(layout=grid.layout(ncol=1,nrow=2,heights=c(2,1))))
+print(ggplot(star.logs.unmapped,
+             aes(x=capfirst(species),y=as.numeric(gsub("%","",value))))
+      + geom_boxplot()
+      + facet_grid(field~.,scales="free")
+      + ylab("Percent of Reads")
+      + xlab(NULL)
+      + theme_bw()
+      + theme(legend.position="top",
+              plot.margin=unit(c(0,0,0,1.1),"strwidth",data=list("","","","e8")),
+              axis.title.x=element_blank(),
+              axis.text.x = element_blank()),#element_text(angle = 30, hjust = 1, vjust=1,face="italic")),
+      vp=viewport(layout.pos.col=1,layout.pos.row=1)
+      )
+pushViewport(viewport(layout.pos.col=1,layout.pos.row=1))
+grid.text("A",
+          y=unit(1,"npc")-unit(0.1,"cm"),
+          x=unit(0,"npc")+unit(0.1,"cm"),
+          gp=gpar(fontsize=24),
+          just=c("left","top"))
+popViewport()          
+print(ggplot(star.logs[grepl("input reads$",field),],
+             aes(x=capfirst(species),y=as.numeric(value)))
+      + geom_boxplot()
+      + scale_y_log10()
+      + ylab("Reads")
+      + xlab("Species")
+      + theme_bw()
+      + theme(legend.position="top",
+              plot.margin=unit(c(0,1.6,0,0),"strheight",data=list("","TO","","")),
+              axis.text.x = element_text(angle = 30, hjust = 1, vjust=1,face="italic")),
+      vp=viewport(layout.pos.col=1,layout.pos.row=2))
+pushViewport(viewport(layout.pos.col=1,layout.pos.row=2))
+grid.text("B",
+          y=unit(1,"npc")-unit(0.1,"cm"),
+          x=unit(0,"npc")+unit(0.1,"cm"),
+          gp=gpar(fontsize=24),
+          just=c("left","top"))
+popViewport(2)
+@ 
+\caption{RNAseq read and alignment statistics for all species. A)
+  Boxplot of percentages of unmapped reads in each species; 0\% of
+  reads in all species were unmapped because of mismatches. B) Boxplot
+  of number of RNAseq reads in each species.}
+\label{fig:transcriptome_statistics}
+\end{figure}
+
 
 \begin{figure}
 <<reads.vs.read.length,fig.width=8,fig.height=8,echo=FALSE>>=
@@ -342,16 +398,16 @@ for (this.species in names(species.names)) {
 <<go.analysis.top.5p.all.species,echo=FALSE,results="asis">>=
 for (this.species in names(species.names)) {
     cat(paste0("\\subsubsection{Signficantly enriched ($\\mathrm{FDR}\\le0.05$) GO terms in ",
-                           " the top 5\\% of \\textit{",
+                           " the top 1\\% of \\textit{",
                            capfirst(this.species),"} expressed transcripts}\n\n"))
     this.caption <- paste0("Signficantly enriched ($\\mathrm{FDR}\\le0.05$) GO terms in ",
-                           " the top 5\\% of \\textit{",
+                           " the top 1\\% of \\textit{",
                            capfirst(this.species),"} expressed transcripts.")
-    print(xtable(go.results[grepl("Top 5% No Housekeeping",type) & FDR <= 0.05 & species == this.species,
+    print(xtable(go.results[grepl("Top 1% No Housekeeping",type) & FDR <= 0.05 & species == this.species,
                             list(GO.ID,Term,FDR,Ontology)
                             ][order(FDR)],
                  caption=this.caption,
-                 label=paste0("tab:go_terms_enriched_top_five_",gsub(" ","_",this.species)),
+                 label=paste0("tab:go_terms_enriched_top_one_",gsub(" ","_",this.species)),
                  display=c("s","s","s","e","s")
                  ),
           size="\\small",
@@ -408,6 +464,51 @@ genes.expression.table <- function(species.name,min.fpkm=50) {
 @ 
 
 \section{Gene Expression}
+
+\subsection{Gene Evolution Trees}
+
+ 
+\begin{figure}
+<<hbe1.evolution.tree,echo=FALSE,fig.width=12,fig.height=12,warning=FALSE,message=FALSE>>=
+
+tree.id <-
+    genes.to.tree[combined.fpkm[gene_short_name=="HBE1" & species=="homo sapiens",gene_id],tree]
+gene.tree.table <- trees[[tree.id]]$table
+gene.tree.expression <- combined.fpkm[gene_id %in% gene.tree.table[,gene_id]]
+gene.tree <- read.tree(text=trees[[tree.id]]$tree.dat)
+plot.tree.matrix(read.tree(text=trees[[tree.id]]$tree.dat),gene.tree.table,gene.tree.expression)
+@ 
+\caption{Expression of \textit{HBE1} and related genes}
+\label{fig:hbe1_evolution_tree}
+\end{figure}
+
+\subsection{Clade specific Expression}
+
+\begin{table}
+  \footnotesize
+<<lau.lineage.specific,echo=FALSE,results="asis">>=
+lau.all.lin.spec <- placenta.lineage.specific.table("lau.all")
+setkey(lau.all.lin.spec,"Human Symbol")
+@ 
+\caption{Genes whose expression changed in the Laurasiatheria
+  superorder as compared to all other analyzed species.}
+\label{tab:laurasiatheria_lineage_specific}
+\end{table}
+
+\begin{table}
+  \footnotesize
+<<eua.lau.lineage.specific,echo=FALSE,results="asis">>=
+eua.lau.lin.spec <- placenta.lineage.specific.table("eua.lau")
+setkey(eua.lau.lin.spec,"Human Symbol")
+@ 
+\caption{Genes whose expression changed between the
+  Euasiatherian and Laurasiatherian superorder.}
+\label{tab:laurasiatheria_eurasiatherian_lineage_specific}
+\end{table}
+
+
+\subsection{Species Expression}
+
 <<top.expressed.genes,echo=FALSE,results="asis">>=
 for (this.species in names(species.names)) {
     this.caption <- paste0("\\textit{",
@@ -426,6 +527,87 @@ for (this.species in names(species.names)) {
           )
 }
 @ 
+
+\section{Core Placenta Transcriptome}
+
+\begin{figure}
+<<core.placenta.transcriptome.distribution,fig.width=8,fig.height=8,out.height="0.8\\textheight",echo=FALSE,message=FALSE>>=
+calculate.distribution.shape <- 
+    function(min.vector) {
+        min.vector <- sort(min.vector,decreasing=TRUE)
+        temp <- data.table(FPKM=min.vector,num_genes=1:length(min.vector))
+        temp <- temp[order(-num_genes)][!duplicated(FPKM)]
+        return(temp)
+    }
+
+cptg.nh <- core.placenta.transcriptome.genes.shape[!(human_name %in% housekeeping.genes.superset[,gene_short_name])]
+
+cpt.distribution.shape <- 
+    lapply(c("min_expression",
+             "second_min_expression",
+             "third_min_expression",
+             "fourth_min_expression",
+             "fifth_min_expression"),
+           function(x){
+               calculate.distribution.shape(cptg.nh[,x,with=FALSE][[1]])[,`Lowest Expression`:=x]
+           })
+cpt.distribution.shape <- 
+    rbindlist(cpt.distribution.shape)
+
+cpt.distribution.shape <- 
+    cpt.distribution.shape[,`Lowest Expression`:=
+                               gsub("^min_expression$","First",
+                                    `Lowest Expression`)]
+cpt.distribution.shape <- 
+    cpt.distribution.shape[,`Lowest Expression`:=
+                               factor(gsub("^(.)(.+)_min_expression$","\\U\\1\\L\\2",
+                                           `Lowest Expression`,perl=TRUE),
+                                      levels=c("First","Second","Third","Fourth","Fifth"))
+                           ]
+setnames(cpt.distribution.shape,
+         "FPKM",
+         "Expression (FPKM)")
+         
+
+print(ggplot(cpt.distribution.shape[`Expression (FPKM)` > 1,],
+             aes(x=`Expression (FPKM)`,color=`Lowest Expression`,y=num_genes))
+      + geom_line(lwd=1)
+      + xlab(expression(FPKM))
+      + ylab("Genes with N-th Lowest Expression")
+      + scale_y_log10()
+      + scale_x_log10()
+      + geom_vline(xintercept=10)
+      + geom_segment(mapping=aes(y=V1,
+                         yend=V1,
+                         xend=10,
+                         x=100,
+                         color=`Lowest Expression`),
+                     data=cpt.distribution.shape[`Expression (FPKM)` > 10,
+                                              max(num_genes),`Lowest Expression`],
+                     arrow=arrow(length=unit(0.5,"cm"))
+                   )
+      + geom_text(mapping=aes(x=100,
+                      y=V1,
+                      label=paste0(V1," genes"),override=TRUE),
+                  data=cpt.distribution.shape[`Expression (FPKM)` > 10,
+                      max(num_genes),`Lowest Expression`],
+                  show_guide=FALSE,
+                  hjust=0
+                  )
+      + guides(color=guide_legend(title="Lowest\nExpression"))
+      )
+@ 
+\caption{Distribution shape of placenta core genes. The vertical axis shows
+  the number of orthologous gene sets included in the core placenta
+  transcriptome if the least expression cutoff (or second-least, etc.)
+  was set to the horizontal axis. For example, if the cutoff is set to 10
+  (vertical black line), 37 genes would be included if the FPKM of all
+  species must be at least 10, 134 genes would be included if all but
+  one species must have FPKM of at least 10. 655 genes would be
+  included if all but five species must have FPKM of at least 10.}
+\label{fig:core_placenta_transcriptome_shape}
+\end{figure}
+
 
  
 \printbibliography
